✨ feat: support assistant default model groups

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -480,7 +480,9 @@
     },
     "search": "Search assistants...",
     "settings": {
+      "add_model": "Add Model",
       "default_model": "Default Model",
+      "default_models": "Default Models",
       "knowledge_base": {
         "label": "Knowledge Base Settings",
         "recognition": {
