✨ feat: support assistant default model groups

--- a/src/renderer/src/i18n/locales/zh-tw.json
+++ b/src/renderer/src/i18n/locales/zh-tw.json
@@ -367,7 +367,9 @@
     },
     "search": "搜尋助手...",
     "settings": {
+      "add_model": "新增模型",
       "default_model": "預設模型",
+      "default_models": "預設模型組",
       "knowledge_base": {
         "label": "知識庫設定",
         "recognition": {
