✨ feat: enhance assistant default models with quick save and topic reset
- Add "Save as Default" button in mention models quick panel
- Clear mentioned models cache when starting new topic
- Reset to assistant defaults on new topic creation
- Update i18n keys for new save functionality across all locales

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -482,7 +482,12 @@
     "settings": {
       "add_model": "Add Model",
       "default_model": "Default Model",
-      "default_models": "Default Models",
+      "default_models": {
+        "label": "Default Models",
+        "save": "Save as Default",
+        "saveDescription": "Save current model selection as default for this assistant",
+        "saved": "Default models saved successfully"
+      },
       "knowledge_base": {
         "label": "Knowledge Base Settings",
         "recognition": {
