--- a/src/renderer/src/i18n/locales/zh-tw.json
+++ b/src/renderer/src/i18n/locales/zh-tw.json
@@ -369,7 +369,12 @@
     "settings": {
       "add_model": "新增模型",
       "default_model": "預設模型",
-      "default_models": "預設模型組",
+      "default_models": {
+        "label": "預設模型組",
+        "save": "儲存為預設模型組",
+        "saveDescription": "將目前選擇的模型儲存為此助手的預設模型組",
+        "saved": "預設模型組已儲存"
+      },
       "knowledge_base": {
         "label": "知識庫設定",
         "recognition": {
