🐛 fix: improve assistant default models feature
- Add error handling with try-catch for save action
- Use LoggerService instead of console.error
- Remove duplicate model prevention to allow duplicates
- Add save_failed i18n key across all locales
- Sync i18n files for proper key ordering

--- a/src/renderer/src/i18n/locales/zh-cn.json
+++ b/src/renderer/src/i18n/locales/zh-cn.json
@@ -373,6 +373,7 @@
         "label": "默认模型组",
         "save": "保存为默认模型组",
         "saveDescription": "将当前选择的模型保存为该助手的默认模型组",
+        "save_failed": "保存默认模型组失败",
         "saved": "默认模型组已保存"
       },
       "knowledge_base": {
