--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -373,6 +373,7 @@
         "label": "Default Models",
         "save": "Save as Default",
         "saveDescription": "Save current model selection as default for this assistant",
+        "save_failed": "Failed to save default models",
         "saved": "Default models saved successfully"
       },
       "knowledge_base": {
