🐛 fix: improve assistant default models feature
- Add error handling with try-catch for save action
- Use LoggerService instead of console.error
- Remove duplicate model prevention to allow duplicates
- Add save_failed i18n key across all locales
- Sync i18n files for proper key ordering

--- a/src/renderer/src/i18n/locales/zh-tw.json
+++ b/src/renderer/src/i18n/locales/zh-tw.json
@@ -486,6 +486,7 @@
         "label": "預設模型組",
         "save": "儲存為預設模型組",
         "saveDescription": "將目前選擇的模型儲存為此助手的預設模型組",
+        "save_failed": "儲存預設模型組失敗",
         "saved": "預設模型組已儲存"
       },
       "knowledge_base": {
