🐛 fix: prevent duplicate default assistant models

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -487,7 +487,8 @@
         "save": "Save as Default",
         "saveDescription": "Save current model selection as default for this assistant",
         "save_failed": "Failed to save default models",
-        "saved": "Default models saved successfully"
+        "saved": "Default models saved successfully",
+        "duplicate": "This model is already in the default list"
       },
       "knowledge_base": {
         "label": "Knowledge Base Settings",
