--- a/src/renderer/src/i18n/locales/zh-cn.json
+++ b/src/renderer/src/i18n/locales/zh-cn.json
@@ -487,7 +487,8 @@
         "save": "保存为默认模型组",
         "saveDescription": "将当前选择的模型保存为该助手的默认模型组",
         "save_failed": "保存默认模型组失败",
-        "saved": "默认模型组已保存"
+        "saved": "默认模型组已保存",
+        "duplicate": "该模型已在默认列表中"
       },
       "knowledge_base": {
         "label": "知识库设置",
