✨ feat: add toggle to enable/disable default model mentions
Add per-assistant control for automatic default model mentions via a toggle switch in assistant settings. When disabled, users must manually select models via @ panel for each new topic instead of auto-populating from defaults.

- Add `enableDefaultModelMentions` field to Assistant type (defaults to true)
- Add inline Switch component in AssistantModelSettings next to "Default Models" label
- Update Inputbar logic to respect toggle setting:
  - Initial state checks toggle before seeding default models
  - Cache restoration respects toggle
  - Default sync respects toggle
  - New topic creation respects toggle when resetting mentions
- Add i18n translations for toggle label across all locales
- Backward compatible: undefined/null defaults to enabled behavior

Files modified:
- src/renderer/src/types/index.ts (line 51)
- src/renderer/src/pages/settings/AssistantSettings/AssistantModelSettings.tsx (lines 42-44, 250-260)
- src/renderer/src/pages/home/Inputbar/Inputbar.tsx (lines 116-118, 232-254, 463-485)
- src/renderer/src/i18n/locales/*.json (enableMentions key)

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -483,12 +483,13 @@
       "add_model": "Add Model",
       "default_model": "Default Model",
       "default_models": {
+        "duplicate": "This model is already in the default list",
+        "enableMentions": "Enable Default Mentions",
         "label": "Default Models",
         "save": "Save as Default",
         "saveDescription": "Save current model selection as default for this assistant",
         "save_failed": "Failed to save default models",
-        "saved": "Default models saved successfully",
-        "duplicate": "This model is already in the default list"
+        "saved": "Default models saved successfully"
       },
       "knowledge_base": {
         "label": "Knowledge Base Settings",
