--- a/src/renderer/src/i18n/locales/zh-cn.json
+++ b/src/renderer/src/i18n/locales/zh-cn.json
@@ -483,12 +483,13 @@
       "add_model": "添加模型",
       "default_model": "默认模型",
       "default_models": {
+        "duplicate": "该模型已在默认列表中",
+        "enableMentions": "开启默认模型组",
         "label": "默认模型组",
         "save": "保存为默认模型组",
         "saveDescription": "将当前选择的模型保存为该助手的默认模型组",
         "save_failed": "保存默认模型组失败",
-        "saved": "默认模型组已保存",
-        "duplicate": "该模型已在默认列表中"
+        "saved": "默认模型组已保存"
       },
       "knowledge_base": {
         "label": "知识库设置",
