✨ feat: add batch move topics functionality
- Create new MoveTopicsPopup component for selecting and moving multiple topics between assistants
- Add moveMultipleTopics action to Redux store for batch topic relocation
- Extend AssistantItem UI with topic move option in context menu
- Update useAssistant hook with moveMultipleTopics implementation
- Add i18n translations for move topics feature across all locales (en-us, zh-cn, zh-tw, el-gr, es-es, fr-fr, ja-jp, pt-pt, ru-ru)
- Fix formatting issues to pass build checks

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -284,6 +284,20 @@
       "showByList": "List View",
       "showByTags": "Tag View"
     },
+    "move_topics": {
+      "deselect_all": "Deselect All",
+      "error": "Failed to move topics",
+      "modal_title": "Move Topics",
+      "move_button": "Move",
+      "moving": "Moving topics...",
+      "select_all": "Select All",
+      "select_destination": "Select Destination Assistant",
+      "select_destination_placeholder": "Choose an assistant...",
+      "select_topics": "Select Topics",
+      "success": "Successful",
+      "summary": "Move {{count}} topic(s) to {{destination}}",
+      "title": "[to be translated]:批量移動主題"
+    },
     "presets": {
       "add": {
         "button": "Add to Assistant",
