--- a/src/renderer/src/i18n/locales/zh-cn.json
+++ b/src/renderer/src/i18n/locales/zh-cn.json
@@ -287,15 +287,15 @@
     "move_topics": {
       "deselect_all": "取消全选",
       "error": "移动主题失败",
-      "modal_title": "移动主题",
+      "modal_title": "移动话题",
       "move_button": "移动",
-      "moving": "正在移动主题...",
+      "moving": "正在移动话题...",
       "select_all": "全选",
       "select_destination": "选择目标助手",
       "select_destination_placeholder": "选择一个助手...",
-      "select_topics": "选择主题",
+      "select_topics": "选择话题",
       "success": "移动成功",
-      "summary": "将 {{count}} 个主题移动到 {{destination}}",
+      "summary": "将 {{count}} 个话题移动到 {{destination}}",
       "title": "批量移动话题"
     },
     "presets": {
