✨ feat: toggle default mentions in inputbar @ button
Transform @ button from opening model picker to per-topic toggle for default mentions.
- State is now per-topic, not persisted to assistant config
- Enabled state (colored) shows default models are active for current conversation
- Disabled state (no color) clears mention chips, user must manually select via @
- Button visual state based on assistant.enableDefaultModelMentions for new topics
- Tooltip shows "enabled/disabled" status with i18n support
- All 9 locale files updated with new i18n keys

--- a/src/renderer/src/i18n/locales/zh-tw.json
+++ b/src/renderer/src/i18n/locales/zh-tw.json
@@ -384,8 +384,10 @@
       "add_model": "新增模型",
       "default_model": "預設模型",
       "default_models": {
+        "disabled": "已禁用預設提及",
         "duplicate": "此模型已在預設列表中",
         "enableMentions": "開啟默認模型組",
+        "enabled": "已啟用預設提及",
         "label": "預設模型組",
         "save": "儲存為預設模型組",
         "saveDescription": "將目前選擇的模型儲存為此助手的預設模型組",
