--- a/src/renderer/src/i18n/locales/zh-cn.json
+++ b/src/renderer/src/i18n/locales/zh-cn.json
@@ -384,8 +384,10 @@
       "add_model": "添加模型",
       "default_model": "默认模型",
       "default_models": {
+        "disabled": "已禁用默认提及",
         "duplicate": "该模型已在默认列表中",
         "enableMentions": "开启默认模型组",
+        "enabled": "已启用默认提及",
         "label": "默认模型组",
         "save": "保存为默认模型组",
         "saveDescription": "将当前选择的模型保存为该助手的默认模型组",
