✨ feat: toggle default mentions in inputbar @ button
Transform @ button from opening model picker to per-topic toggle for default mentions.
- State is now per-topic, not persisted to assistant config
- Enabled state (colored) shows default models are active for current conversation
- Disabled state (no color) clears mention chips, user must manually select via @
- Button visual state based on assistant.enableDefaultModelMentions for new topics
- Tooltip shows "enabled/disabled" status with i18n support
- All 9 locale files updated with new i18n keys

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -483,8 +483,10 @@
       "add_model": "Add Model",
       "default_model": "Default Model",
       "default_models": {
+        "disabled": "Default mentions disabled",
         "duplicate": "This model is already in the default list",
         "enableMentions": "Enable Default Mentions",
+        "enabled": "Default mentions enabled",
         "label": "Default Models",
         "save": "Save as Default",
         "saveDescription": "Save current model selection as default for this assistant",
