--- a/src/renderer/src/i18n/translate/ja-jp.json
+++ b/src/renderer/src/i18n/translate/ja-jp.json
@@ -483,8 +483,10 @@
       "add_model": "[to be translated]:添加模型",
       "default_model": "デフォルトモデル",
       "default_models": {
+        "disabled": "[to be translated]:已禁用默认提及",
         "duplicate": "[to be translated]:该模型已在默认列表中",
         "enableMentions": "[to be translated]:开启默认模型组",
+        "enabled": "[to be translated]:已启用默认提及",
         "label": "[to be translated]:默认模型组",
         "save": "[to be translated]:保存为默认模型组",
         "saveDescription": "[to be translated]:将当前选择的模型保存为该助手的默认模型组",
