Revert "Merge remote-tracking branch 'origin/main' into personal"
This reverts commit 65d1a94ff05c88410dc9cbcfe06639f76c15fda7, reversing
changes made to 0257da8ef9cdae3763532c3135a8479c7a670044.

--- a/src/renderer/src/i18n/translate/es-es.json
+++ b/src/renderer/src/i18n/translate/es-es.json
@@ -4504,7 +4504,7 @@
       "confirm": "Confirmar",
       "forward": "Adelante",
       "multiple": "Selección múltiple",
-      "noResult": "No se encontraron resultados",
+      "noResult": "[to be translated]:No results found",
       "page": "Página",
       "select": "Seleccionar",
       "title": "Menú de acceso rápido"
