--- a/src/renderer/src/i18n/translate/fr-fr.json
+++ b/src/renderer/src/i18n/translate/fr-fr.json
@@ -4504,7 +4504,7 @@
       "confirm": "Подтвердить",
       "forward": "Вперед",
       "multiple": "Множественный выбор",
-      "noResult": "Aucun résultat trouvé",
+      "noResult": "[to be translated]:No results found",
       "page": "Перелистнуть страницу",
       "select": "Выбрать",
       "title": "Быстрое меню"
