--- a/src/renderer/src/i18n/translate/ja-jp.json
+++ b/src/renderer/src/i18n/translate/ja-jp.json
@@ -4504,7 +4504,7 @@
       "confirm": "確認",
       "forward": "進む",
       "multiple": "複数選択",
-      "noResult": "結果が見つかりません",
+      "noResult": "[to be translated]:No results found",
       "page": "ページ",
       "select": "選択",
       "title": "クイックメニュー"
