--- a/src/renderer/src/i18n/translate/pt-pt.json
+++ b/src/renderer/src/i18n/translate/pt-pt.json
@@ -4504,7 +4504,7 @@
       "confirm": "Confirmar",
       "forward": "Avançar",
       "multiple": "Múltipla Seleção",
-      "noResult": "Nenhum resultado encontrado",
+      "noResult": "[to be translated]:No results found",
       "page": "Página",
       "select": "Selecionar",
       "title": "Menu de Atalho"
