--- a/src/renderer/src/i18n/translate/ru-ru.json
+++ b/src/renderer/src/i18n/translate/ru-ru.json
@@ -4504,7 +4504,7 @@
       "confirm": "Подтвердить",
       "forward": "Вперед",
       "multiple": "Множественный выбор",
-      "noResult": "Результаты не найдены",
+      "noResult": "[to be translated]:No results found",
       "page": "Страница",
       "select": "Выбрать",
       "title": "Быстрое меню"
