--- a/src/renderer/src/i18n/locales/zh-tw.json
+++ b/src/renderer/src/i18n/locales/zh-tw.json
@@ -4504,7 +4504,7 @@
       "confirm": "確認",
       "forward": "前進",
       "multiple": "多選",
-      "noResult": "未找到結果",
+      "noResult": "[to be translated]:No results found",
       "page": "翻頁",
       "select": "選擇",
       "title": "快捷選單"
