--- a/src/renderer/src/i18n/translate/de-de.json
+++ b/src/renderer/src/i18n/translate/de-de.json
@@ -4478,7 +4478,7 @@
       "confirm": "Bestätigen",
       "forward": "Vorwärts",
       "multiple": "Mehrfachauswahl",
-      "noResult": "Keine Ergebnisse gefunden",
+      "noResult": "[to be translated]:No results found",
       "page": "Seite umblättern",
       "select": "Auswählen",
       "title": "Schnellmenü"
