--- a/src/renderer/src/i18n/translate/el-gr.json
+++ b/src/renderer/src/i18n/translate/el-gr.json
@@ -4504,7 +4504,7 @@
       "confirm": "Επιβεβαίωση",
       "forward": "Μπρος",
       "multiple": "Πολλαπλή επιλογή",
-      "noResult": "Δεν βρέθηκαν αποτελέσματα",
+      "noResult": "[to be translated]:No results found",
       "page": "Σελίδα",
       "select": "Επιλογή",
       "title": "Γρήγορη Πρόσβαση"
